<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="login_title_first">Real Estate</string>
    <string name="login_title_second">Manager</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="loan">Loan</string>
    <string name="total_amount">Total amount : %1$s</string>
    <string name="total_interest">Total interest : %1$s</string>
    <string name="annual_payment">Annual payment : %1$s</string>
    <string name="monthly_payment">Monthly payment : %1$s</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="interested_rate">Interested Rate</string>
    <string name="number_of_year">Number of Year(s)</string>
    <string name="calculate">Calculate</string>
    <string name="currency">currency</string>
    <string name="euro">euro</string>
    <string name="logout">Logout</string>
    <string name="add_new_property">Add new property</string>
    <string name="price">Price</string>
    <string name="area_in_square_meter">Area in m²</string>
    <string name="type">Type</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="available_date">Available date</string>
    <string name="sold_date">Sold date</string>
    <string name="sold">Sold</string>
    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="add_photo">Add photo</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="update">update</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="restaurants">Restaurants</string>
    <string name="bars">Bars</string>
    <string name="stores">Stores</string>
    <string name="parks">Parks</string>
    <string name="schools">Schools</string>
    <string name="hospitals">Hospitals</string>
    <string name="sold_cap">SOLD</string>
    <string name="available_cap">AVAILABLE</string>
    <string name="entry_date_param">Entry date: %s</string>
    <string name="sold_date_param">Sold date: %s</string>
    <string name="agent">Agent</string>
    <string name="agent_name">%s %s</string>
    <string name="label">Label</string>
    <string name="price_min">Price min</string>
    <string name="dash">-</string>
    <string name="price_max">Price max</string>
    <string name="area_max">Area max</string>
    <string name="area_min">Area min</string>
    <string name="room_min">Room min</string>
    <string name="room_max">Room max</string>
    <string name="bedroom_min">Bedroom min</string>
    <string name="bedroom_max">Bedroom max</string>
    <string name="bathroom_min">Bathroom min</string>
    <string name="bathroom_max">Bathroom max</string>
    <string name="entry_date_min">Entry date min</string>
    <string name="entry_date_max">Entry date max</string>
    <string name="sold_date_min">Sold date min</string>
    <string name="sold_date_max">Sold date max</string>
    <string name="no_result">No Result</string>
    <string name="dialog_title_gps">GPS is not activated</string>
    <string name="dialog_message_gps">To find your location, activate the GPS.</string>
    <string name="dialog_title_internet">Internet is not activated</string>
    <string name="dialog_message_internet">To display all properties, activate internet.</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_button_wifi">Wifi</string>
    <string name="dialog_button_data">Data</string>
    <string name="search_property">Search Property</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="edit_property">Edit property</string>

    <string-array name="type_of_properties">
        <item>Type</item>
        <item>Flat</item>
        <item>Penthouse</item>
        <item>Duplex</item>
        <item>Villa</item>
        <item>Manor</item>
    </string-array>

    <string-array name="number_of_rooms">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10+</item>
    </string-array>
</resources>
