<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tb_menu_currency"
        android:icon="@drawable/ic_euro"
        android:title="@string/currency"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_reload"
        android:icon="@drawable/ic_reload"
        android:title="@string/update"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_logout"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="never" />

</menu>