<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tb_menu_currency"
        android:icon="@drawable/ic_euro"
        android:title="@string/currency"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_reload"
        android:icon="@drawable/ic_reload"
        android:title="@string/update"
        app:showAsAction="always" />

    <item
        android:id="@+id/tb_menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/tb_menu_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>