<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp"
    tools:context=".ui.fragments.AddFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintBottom_toTopOf="@id/et_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:drawableStart="@drawable/ic_dollar"
        android:drawablePadding="5dp"
        android:hint="@string/price"
        android:inputType="number"
        android:maxLength="9"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_area"
        app:layout_constraintTop_toBottomOf="@id/iv_photo"
        tools:text="$2,000,000" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:drawableStart="@drawable/ic_area"
        android:drawablePadding="10dp"
        android:hint="@string/area_in_square_meter"
        android:importantForAutofill="no"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@id/et_price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_price"
        tools:text="500" />

    <View
        android:id="@+id/divider_1"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_price" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:paddingStart="5dp"
        android:paddingBottom="2dp"
        android:text="@string/type"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sp_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_room"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingStart="5dp"
        android:paddingBottom="2dp"
        android:text="@string/rooms"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_type"
        app:layout_constraintLeft_toRightOf="@id/tv_type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_type"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_type"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sp_room"
        app:layout_constraintTop_toBottomOf="@id/tv_type" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_room"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintLeft_toRightOf="@id/sp_type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bedroom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="2dp"
        android:text="@string/bedrooms"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_bathroom"
        app:layout_constraintTop_toBottomOf="@id/sp_type"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bathroom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="2dp"
        android:text="@string/bathrooms"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/tv_bedroom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_type"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_bedroom"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintBottom_toTopOf="@id/divider_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sp_bathroom"
        app:layout_constraintTop_toBottomOf="@id/tv_bedroom" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_bathroom"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintBottom_toBottomOf="@id/sp_bedroom"
        app:layout_constraintLeft_toRightOf="@id/sp_bedroom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sp_bedroom" />

    <View
        android:id="@+id/divider_2"
        style="@style/DividerHorizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_bedroom" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="5dp"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/et_street"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_2"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_street"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/address"
        android:importantForAutofill="yes"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_postcode"
        app:layout_constraintTop_toBottomOf="@id/tv_location" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_postcode"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/postcode"
        android:importantForAutofill="yes"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@id/et_street"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_street" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/city"
        android:importantForAutofill="yes"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_country"
        app:layout_constraintTop_toBottomOf="@id/et_street" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/country"
        android:importantForAutofill="yes"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@id/et_city"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_street" />

    <View
        android:id="@+id/divider_3"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_poi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_poi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_poi"
        android:drawablePadding="5dp"
        android:text="@string/points_of_interest"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/chip_restaurant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_3"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_restaurant"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/ic_restaurant"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/chip_bar"
        app:layout_constraintTop_toBottomOf="@id/tv_poi" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_bar"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bars"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/ic_bar"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/chip_restaurant"
        app:layout_constraintRight_toLeftOf="@id/chip_store"
        app:layout_constraintTop_toTopOf="@id/chip_restaurant" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_store"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/ic_store"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/chip_bar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/chip_restaurant" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_park"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parks"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/ic_park"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintBottom_toTopOf="@id/divider_4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/chip_school"
        app:layout_constraintTop_toBottomOf="@id/chip_restaurant" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_school"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/schools"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/ic_school"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/chip_park"
        app:layout_constraintRight_toLeftOf="@id/chip_hospital"
        app:layout_constraintTop_toTopOf="@id/chip_park" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_hospital"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/hospitals"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/ic_hospital"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/chip_school"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/chip_park" />

    <View
        android:id="@+id/divider_4"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/et_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_park" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/divider_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_4"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/divider_5"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/et_available_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_available_date"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:focusable="false"
        android:hint="@string/available_date"
        android:inputType="none"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_5" />

</androidx.constraintlayout.widget.ConstraintLayout>